build/log/idf_py_stdout_output_606382
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/mervinnguyen/esp_idf_bme280_spi_driver/build/bootloader && /home/mervinnguyen/.espressif/python_env/idf6.1_py3.10_env/bin/python /home/mervinnguyen/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/mervinnguyen/esp_idf_bme280_spi_driver/build/bootloader/bootloader.bin
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
[2/8] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/spi.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/spi.cpp.obj 
/home/mervinnguyen/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-2938-g12f36a021f\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/mervinnguyen/esp_idf_bme280_spi_driver/build/config -I/home/mervinnguyen/esp_idf_bme280_spi_driver/main -I/home/mervinnguyen/esp/esp-idf/components/esp_libc/platform_include -I/home/mervinnguyen/esp/esp-idf/components/freertos/config/include -I/home/mervinnguyen/esp/esp-idf/components/freertos/config/include/freertos -I/home/mervinnguyen/esp/esp-idf/components/freertos/config/xtensa/include -I/home/mervinnguyen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/mervinnguyen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/mervinnguyen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/mervinnguyen/esp/esp-idf/components/freertos/esp_additions/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/include/soc -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/etm/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/modem/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/mervinnguyen/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/mervinnguyen/esp/esp-idf/components/heap/include -I/home/mervinnguyen/esp/esp-idf/components/heap/tlsf -I/home/mervinnguyen/esp/esp-idf/components/log/include -I/home/mervinnguyen/esp/esp-idf/components/soc/include -I/home/mervinnguyen/esp/esp-idf/components/soc/esp32 -I/home/mervinnguyen/esp/esp-idf/components/soc/esp32/include -I/home/mervinnguyen/esp/esp-idf/components/soc/esp32/register -I/home/mervinnguyen/esp/esp-idf/components/hal/platform_port/include -I/home/mervinnguyen/esp/esp-idf/components/hal/esp32/include -I/home/mervinnguyen/esp/esp-idf/components/hal/include -I/home/mervinnguyen/esp/esp-idf/components/esp_rom/include -I/home/mervinnguyen/esp/esp-idf/components/esp_rom/esp32/include -I/home/mervinnguyen/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/mervinnguyen/esp/esp-idf/components/esp_rom/esp32 -I/home/mervinnguyen/esp/esp-idf/components/esp_common/include -I/home/mervinnguyen/esp/esp-idf/components/esp_system/include -I/home/mervinnguyen/esp/esp-idf/components/esp_system/port/soc -I/home/mervinnguyen/esp/esp-idf/components/esp_system/port/include/private -I/home/mervinnguyen/esp/esp-idf/components/esp_stdio/include -I/home/mervinnguyen/esp/esp-idf/components/xtensa/esp32/include -I/home/mervinnguyen/esp/esp-idf/components/xtensa/include -I/home/mervinnguyen/esp/esp-idf/components/xtensa/deprecated_include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_gpio/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_gpio/esp32/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_usb/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_pmu/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_pmu/esp32/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_ana_conv/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_dma/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_i2s/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_i2s/esp32/include -I/home/mervinnguyen/esp/esp-idf/components/lwip/include -I/home/mervinnguyen/esp/esp-idf/components/lwip/include/apps -I/home/mervinnguyen/esp/esp-idf/components/lwip/lwip/src/include -I/home/mervinnguyen/esp/esp-idf/components/lwip/port/include -I/home/mervinnguyen/esp/esp-idf/components/lwip/port/freertos/include -I/home/mervinnguyen/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/mervinnguyen/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/mervinnguyen/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/mervinnguyen/esp/esp-idf/components/esp_driver_spi/include -I/home/mervinnguyen/esp/esp-idf/components/esp_pm/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_gpspi/include -I/home/mervinnguyen/esp/esp-idf/components/esp_hal_gpspi/esp32/include -I/home/mervinnguyen/esp/esp-idf/components/esp_driver_dma/include @"/home/mervinnguyen/esp_idf_bme280_spi_driver/build/toolchain/cxxflags" -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/mervinnguyen/esp_idf_bme280_spi_driver=. -fmacro-prefix-map=/home/mervinnguyen/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++26 -fno-exceptions -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/spi.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/spi.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/spi.cpp.obj -c /home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:28:5: error: 'buscfg' does not name a type
   28 |     buscfg.miso_io_num = PIN_NUM_MISO;        // GPIO 19: Master In Slave Out (data from BME280)
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:29:5: error: 'buscfg' does not name a type
   29 |     buscfg.mosi_io_num = PIN_NUM_MOSI;        // GPIO 23: Master Out Slave In (data to BME280)
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:30:5: error: 'buscfg' does not name a type
   30 |     buscfg.sclk_io_num = PIN_NUM_CLK;         // GPIO 18: SPI Clock
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:31:5: error: 'buscfg' does not name a type
   31 |     buscfg.quadwp_io_num = -1;                // Quad Write Protect (not used in standard SPI)
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:32:5: error: 'buscfg' does not name a type
   32 |     buscfg.quadhd_io_num = -1;                // Quad Hold (not used in standard SPI)
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:33:5: error: 'buscfg' does not name a type
   33 |     buscfg.data4_io_num = -1;                 // Extra data line 4 (disabled - not using Quad SPI)
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:34:5: error: 'buscfg' does not name a type
   34 |     buscfg.data5_io_num = -1;                 // Extra data line 5 (disabled - not using Quad SPI)
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:35:5: error: 'buscfg' does not name a type
   35 |     buscfg.data6_io_num = -1;                 // Extra data line 6 (disabled - not using Quad SPI)
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:36:5: error: 'buscfg' does not name a type
   36 |     buscfg.data7_io_num = -1;                 // Extra data line 7 (disabled - not using Quad SPI)
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:37:5: error: 'buscfg' does not name a type
   37 |     buscfg.max_transfer_sz = 32;              // Maximum transfer size in bytes (sufficient for register read/write operations)
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:38:5: error: 'buscfg' does not name a type
   38 |     buscfg.flags = 0;                         // No special flags needed for standard SPI operation
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:39:5: error: 'buscfg' does not name a type
   39 |     buscfg.intr_flags = 0;                    // No special interrupt flags needed for this application
      |     ^~~~~~
/home/mervinnguyen/esp_idf_bme280_spi_driver/main/spi.cpp:43:5: error: expected unqualified-id before '.' token
   43 |     .command_bits = 0,                     // No command phase (BME280 uses register address as first byte)
      |     ^
ninja: build stopped: subcommand failed.
